try unstable (full), instead of unstable-slim as base debian container image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: debian:unstable-slim
+image: debian:unstable
 
 variables:
   PACKAGE_CMD_ARCHLINUX: "pacman -Sy --needed --noconfirm --noprogressbar"
