revert previous commit, as there is no apparent difference in runtime between unstable vs unstable-slim

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: debian:unstable
+image: debian:unstable-slim
 
 variables:
   PACKAGE_CMD_ARCHLINUX: "pacman -Sy --needed --noconfirm --noprogressbar"
