try to narrow down PATH issues with llvm-profdata forked by coverage.sh

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,9 @@ build:clang-coverage:
   # Increment the BUMP envvar to force a VM image cache miss
   #
   script:
+    - which llvm-profdata
+    - llvm-profdata --version
+    - echo | xargs llvm-profdata --version
     - cmake --preset coverage
     - cmake --build --preset default
     - export CI_PERSONAL_ACCESS_TOKEN=${CI_PERSONAL_ACCESS_TOKEN}
@@ -60,6 +63,9 @@ build:clang-coverage:
     - export IMG=$(echo "$BUMP" | sha256sum | cut -f1 -d' ')
     - export URI=$(./scripts/gitlab/find-vm-artifact.sh "vm-images/$IMG.zst") && echo "Fetching $URI"
     - ./scripts/gitlab/qemu-build.exp $IMG $URI
+    - which llvm-profdata
+    - llvm-profdata --version
+    - echo | xargs llvm-profdata --version
     - ./scripts/coverage.sh -E main.c coverage.profraw ./build/coverage.xml
   after_script:
     - ./scripts/gitlab/cleanup-vm-archive.sh vm-images
