now that guest OS mounts host OS contents directly, we might not need to deal with caching at all, can instead use new VM image each CI run; try removing all of the caching logic from qemu-build.exp to see how runtime comparse

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,28 +46,14 @@ build:clang-coverage:
   before_script:
     - apt update -qq && apt install -qqy curl expect jq llvm qemu-system-x86 qemu-utils zstd
     - ./scripts/setup/apt.sh
-  #
-  # For CI_PERSONAL_ACCESS_TOKEN, see: Settings > CI/CD > Variables
-  #
-  # Increment the BUMP envvar to force a VM image cache miss
-  #
   script:
     - cmake --preset coverage
     - cmake --build --preset default
-    - export CI_PERSONAL_ACCESS_TOKEN=${CI_PERSONAL_ACCESS_TOKEN}
-    - export CI_PROJECT_ID=${CI_PROJECT_ID}
-    - export BUMP=12
-    - export IMG=$(echo "$BUMP" | sha256sum | cut -f1 -d' ')
-    - export URI=$(./scripts/gitlab/find-vm-artifact.sh "vm-images/$IMG.zst") && echo "Fetching $URI"
-    - ./scripts/gitlab/qemu-build.exp $IMG $URI
+    - ./scripts/gitlab/qemu-build.exp
     - ./scripts/coverage.sh -E main.c coverage.profraw ./build/coverage.xml
-  after_script:
-    - ./scripts/gitlab/cleanup-vm-archive.sh vm-images
   coverage: '/^TOTAL.*\s+([\d\.]+\%)$/'
   artifacts:
     when: always
-    paths:
-      - vm-images/*.zst
     reports:
       junit: ./build/junit.xml
       coverage_report:
