--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ build:clang-coverage:
   tags:
     - saas-linux-medium-amd64
   before_script:
-    - apt update -qq && apt install -qqy curl expect llvm qemu-system-x86 zstd
+    - apt update -qq && apt install -qqy curl expect llvm qemu-system-x86
     - ./scripts/setup/apt.sh
   script:
     - cmake --preset coverage
