--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,9 +40,9 @@ build:clang-format:
 
 build:clang-coverage:
   stage: build
-  # Use medium machine type (instead of default small) to improve VM performance
+  # Use large machine type (instead of default small) to improve VM performance
   tags:
-    - saas-linux-medium-amd64
+    - saas-linux-large-amd64
   before_script:
     - apt update -qq && apt install -qqy curl expect llvm qemu-system-x86
     - ./scripts/setup/apt.sh
