--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: debian:unstable-slim
 
 variables:
-  PACKAGE_CMD: "apt install -qqy -o=Dpkg::Use-Pty=0"
+  PACKAGE_CMD: "apt install -qqy"
   DEBIAN_FRONTEND: noninteractive
   TESTS_FAIL_LACK_OF_LANDLOCK_API_IN_CI_RUNNERS: "^(cli-try-sandbox|landlock|sandbox|seccomp)$"
 
@@ -49,7 +49,7 @@ build:clang-coverage:
   script:
     - cmake --preset coverage
     - cmake --build --preset default
-    - ${PACKAGE_CMD} curl expect llvm qemu-system-x86
+    - ${PACKAGE_CMD} curl expect llvm qemu-system-x86 > /dev/null
     - ./scripts/gitlab/qemu-build.exp
     - ./scripts/coverage.sh -E main.c coverage.profraw ./build/coverage.xml
   coverage: '/^TOTAL.*\s+([\d\.]+\%)$/'
@@ -91,7 +91,7 @@ lint:shell:
   stage: build
   before_script:
     - apt update -qq
-    - ${PACKAGE_CMD} git shellcheck
+    - ${PACKAGE_CMD} git shellcheck > /dev/null
   script:
     - git ls-files -z '**.sh' | xargs -0 shellcheck --shell=bash
 
@@ -99,7 +99,7 @@ lint:tcl:
   stage: build
   before_script:
     - apt update -qq
-    - ${PACKAGE_CMD} git python3-pip
+    - ${PACKAGE_CMD} git python3-pip > /dev/null
     - pip install --break-system-packages --root-user-action ignore tclint
   script:
     - git ls-files -z '*.exp' | xargs -0 tclfmt --in-place --indent=tab --
