cosmetic: alpha order of envvars in gitlab YAML, fix indirectly by renaming PACKAGE_CMD to DEBIAN_* prefix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: debian:unstable-slim
 
 variables:
-  PACKAGE_CMD: "apt-get install -qqy"
+  DEBIAN_INSTALL: "apt-get install -qqy"
   DEBIAN_FRONTEND: noninteractive
   TESTS_FAIL_LACK_OF_LANDLOCK_API_IN_CI_RUNNERS: "^(cli-try-sandbox|landlock|sandbox|seccomp)$"
 
@@ -56,7 +56,7 @@ build:clang-coverage:
   script:
     - cmake --preset coverage
     - cmake --build --preset default
-    - eatmydata ${PACKAGE_CMD} aria2 expect llvm qemu-system-x86 > /dev/null
+    - eatmydata ${DEBIAN_INSTALL} aria2 expect llvm qemu-system-x86 > /dev/null
     - aria2c -x 5 -o vm.qcow2 https://cdimage.debian.org/images/cloud/sid/daily/latest/debian-sid-nocloud-amd64-daily.qcow2
     - ./scripts/gitlab/qemu-build.exp vm.qcow2
     - ./scripts/coverage.sh -E main.c coverage.profraw ./build/coverage.xml
@@ -99,7 +99,7 @@ lint:shell:
   stage: build
   before_script:
     - apt-get update -qq
-    - ${PACKAGE_CMD} git shellcheck > /dev/null
+    - ${DEBIAN_INSTALL} git shellcheck > /dev/null
   script:
     - git ls-files -z '**.sh' | xargs -0 shellcheck --shell=bash
 
@@ -107,7 +107,7 @@ lint:tcl:
   stage: build
   before_script:
     - apt-get update -qq
-    - ${PACKAGE_CMD} git python3-pip > /dev/null
+    - ${DEBIAN_INSTALL} git python3-pip > /dev/null
     - pip install -q --break-system-packages --root-user-action ignore tclint
   script:
     - git ls-files -z '*.exp' | xargs -0 tclfmt --in-place --indent=tab --
