--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -105,7 +105,8 @@ jobs:
     - name: Configure, build, and test
       uses: vmactions/openbsd-vm@v1
       with:
-        prepare: pkg_add cmake git ada curl duktape jansson pcre2 protobuf-c
+        prepare: >
+          ./scripts/setup/openbsd.sh
         run: >
           cmake --preset default &&
           cmake --build --preset default &&
